--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
    --myBlue: #7bc1fa; 
 
 }
+.title{
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 15px;
+}
 .wrapper{
     background-color: var(--myBlue);
     width: 100vw;
@@ -17,12 +22,14 @@
 }
 .container{   
     width: 500px;
-    min-height: 400px;
+    
     box-shadow: 0px 0px 20px 0px rgba(169, 142, 142, 1);
     background-color: white;
     transition: .3s;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 .container:hover{
     box-shadow: 0px 0px 20px 0px rgba(10, 9, 9, 1);
@@ -34,9 +41,41 @@
     display: flex;
     flex-direction: column;
     list-style: none;
-    width: 80%;
+    width: 90%;
     justify-content: center;
     align-items: center;
+    margin: 10px;
+}
+.questionLiContainer{
+    border: 1px solid rgb(53, 48, 48);
+    width: 100%;
+    margin: 10px;
+    cursor: pointer;
+    transition: .5s;
+    display: flex;
+    flex-direction: column;
+
+}
+.questionLiContainer:hover{
+    box-shadow: 0px 0px 11px 1px rgba(212, 213, 226, 1);
+    background-color: rgb(240, 235, 228);
 
 }
 
+.detailContainer{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    min-height: 30px;
+    padding: 10px;
+}
+.ask{
+    font-size: 1.3;
+    font-weight: 700;
+}
+
+.answer{
+    padding: 10px;
+    text-align: justify;
+    transition: all 1s;
+}
